Update About Me

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -66,11 +66,10 @@ Blog:<a href="http://www.subond.com">www.subond.com</a></p>
 <p>I am a Master graduate in the School of Information and Communication Engineering of Beijing University of Posts and Telecommunications, advised by Prof. Wei Zheng. I received the B.E. degree from the Beijing University of Chemical Technology.</p>
 <p>My researches mainly focus on the application of Software-Defined Network and Network Function Virtualization in the mobile core network (such as vEPC). And I also involved in the re-design of the overall network architecture and the resource orchestration and Service Function Chaining in the new architecture. In the past work, I have completed the management and orchestration in the core network (vEPC) with Juju (an open source application modeling tool). I have great interests in  MANO (Management and Orchestration0). I have participated in multiple joint develop projects with China Mobile, China Telecom in NFV field.</p>
 <h2>Education</h2>
-<table width="700" algin="left">
-  <tr><td><b>Beijing University of Posts and Telecommunications</b></td><td>2015.09-2018.04</td></tr>
+<table width="700" height="150" algin="left">
+  <tr><td><b>Beijing University of Posts and Telecommunications</b></td><td>09/2015-04/2018</td></tr>
   <tr><td>M.S. degree in Engineering</td><td></td></tr>
   <tr><td>Research Filed: Software Defined Network, Network Functions Virtualization</td><td></td></tr>
-
   <tr><td><b>Beijing University of Chemical Technology</b></td><td>09/2011-07/2015</td></tr>
   <tr><td>B.S. degree in Engineering</td><td>GPA:3.43/4.00</td></tr>
 </table>
