--- a/authors.html
+++ b/authors.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="utf-8">
-    <title>Milestone - Authors</title>
+    <title>SuperBond - Authors</title>
     <meta name="description" content="">
     <meta name="author" content="subond">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,8 +19,8 @@
     <link href="./theme/pygments.css" rel="stylesheet">
 
     <!-- So Firefox can bookmark->"abo this site" -->
-        <link href="www.subond.com/feeds/all.atom.xml" rel="alternate" title="Milestone" type="application/atom+xml">
-        <link href="www.subond.com/feeds/all.rss.xml" rel="alternate" title="Milestone" type="application/rss+xml">
+        <link href="www.subond.com/feeds/all.atom.xml" rel="alternate" title="SuperBond" type="application/atom+xml">
+        <link href="www.subond.com/feeds/all.rss.xml" rel="alternate" title="SuperBond" type="application/rss+xml">
 
 </head>
 
@@ -36,7 +36,7 @@
              <span class="icon-bar"></span>
          </a>
 
-        <a class="brand" href=".">Milestone</a>
+        <a class="brand" href=".">SuperBond</a>
 
         <div class="nav-collapse">
         <ul class="nav">
@@ -54,7 +54,7 @@
     <div class="row">
 
         <div class="span9">
-    <h1>Authors on Milestone</h1>
+    <h1>Authors on SuperBond</h1>
 
     <ul>        <li><a href="./author/subond.html">subond</a> (29)</li>
     </ul>
@@ -119,6 +119,7 @@
            
                 <li><a href="https://github.com/yusubond">Github</a></li>
                 <li><a href="http://weibo.com/ybconly">Weibo</a></li>
+                <li><a href="http://subond.lofter.com/">Lofter</a></li>
             </ul>
             </div>
             </div>
@@ -127,7 +128,7 @@
     </div>     </div> 
 <footer>
 <br />
-<p><a href=".">Milestone</a> &copy; subond 2017</p>
+<p><a href=".">SuperBond</a> &copy; subond 2017</p>
 </footer>
 
 </div> <!-- /container -->
