Add some essays

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -226,7 +226,7 @@ Blog:<a href="http://www.subond.com">www.subond.com</a></p>
                 Categories
                 </li>
                 
-                <li><a href="../category/life.html">life</a></li>
+                <li><a href="../category/life.html">Life</a></li>
                 <li><a href="../category/note.html">Note</a></li>
                 <li><a href="../category/read.html">Read</a></li>
                 <li><a href="../category/tech.html">Tech</a></li>
