--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -19,7 +19,7 @@
     <link href="../theme/pygments.css" rel="stylesheet">
 
     <!-- So Firefox can bookmark->"abo this site" -->
-        <link href="None/feeds/all.atom.xml" rel="alternate" title="SuperBond" type="application/atom+xml">
+        <link href="www.subond.com/feeds/all.atom.xml" rel="alternate" title="SuperBond" type="application/atom+xml">
 
 </head>
 
@@ -212,7 +212,7 @@ Blog:<a href="http://www.subond.com">www.subond.com</a></p>
 
 
 
-                <li><a href="None/feeds/all.atom.xml" rel="alternate">Atom feed</a></li>
+                <li><a href="www.subond.com/feeds/all.atom.xml" rel="alternate">Atom feed</a></li>
 
             </ul>
             </div>
