--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -58,9 +58,9 @@
     <h2 class="content-title">
         About Me
     </h2>
-    <h2>Bangchao Yu (于邦超)</h2>
-<p>Email:yubc0321@gmail.com<br>
-Github:<a href="https://github.com/yusubond">https://github.com/yusubond</a><br>
+    <h2>Subond Yu (于邦超)</h2>
+<p>Email:yubc0321@gmail.com
+Github:<a href="https://github.com/yusubond">https://github.com/yusubond</a>
 Blog:<a href="http://www.subond.com">www.subond.com</a></p>
 <p>I am a Master graduate in the School of Information and Communication Engineering of Beijing University of Posts and Telecommunications, advised by Prof. Wei Zheng. I received the B.E. degree from the Beijing University of Chemical Technology.</p>
 <p>My researches mainly focus on the application of Software-Defined Network and Network Function Virtualization in the mobile core network (such as vEPC). And I also involved in the re-design of the overall network architecture and the resource orchestration and Service Function Chaining in the new architecture. In the past work, I have completed the management and orchestration in the core network (vEPC) with Juju (an open source application modeling tool). I have great interests in  MANO (Management and Orchestration0). I have participated in multiple joint develop projects with China Mobile, China Telecom in NFV field.</p>
@@ -114,14 +114,14 @@ Blog:<a href="http://www.subond.com">www.subond.com</a></p>
 <p><font size="4"><b>教育背景</b></font></p>
 <hr size="3px" color="#000000"/>
 <table width="800" algin="left">
-  <tr height="30"><td>2015.09-2018.04(预计)</td><td>北京邮电大学</td><td>电子与通信工程</td><td>硕士研究生</td></tr>
+  <tr height="30"><td>2015.09-2018.04</td><td>北京邮电大学</td><td>电子与通信工程</td><td>硕士研究生</td></tr>
   <tr height="30"><td>2011.09-2015.06</td><td>北京化工大学</td><td>通信工程</td><td>本科</td></tr>
 </table></p>
 <p><font size="4"><b>实习经历</b></font></p>
 
 <p><hr size="3px" color="#000000"/>
 <table width="600" height="30" algin="left">
-<tr><td><b>2017.08-至今</b></td><td algin="left"><b>VMware·CMBU</b></td></tr>
+<tr><td><b>2017.08-2017.12</b></td><td algin="left"><b>VMware·CMBU</b></td></tr>
 </table>
 <ul>
   <li>从事 NFV 领域中服务与编排前沿技术的调研与代码开发工作，主要包括资源的编排和管理，服务 的设计与创建，策略的设计，服务的编排和管理等</li>
