--- a/tags.html
+++ b/tags.html
@@ -66,6 +66,7 @@
     <li><a href="./tag/essay.html">essay</a></li>
     <li><a href="./tag/git.html">git</a></li>
     <li><a href="./tag/gitbook.html">gitbook</a></li>
+    <li><a href="./tag/golang.html">golang</a></li>
     <li><a href="./tag/google.html">Google</a></li>
     <li><a href="./tag/growth.html">growth</a></li>
     <li><a href="./tag/juju.html">juju</a></li>
@@ -80,7 +81,9 @@
     <li><a href="./tag/process.html">process</a></li>
     <li><a href="./tag/pthread.html">pthread</a></li>
     <li><a href="./tag/reading.html">reading</a></li>
+    <li><a href="./tag/rpc.html">rpc</a></li>
     <li><a href="./tag/socket.html">socket</a></li>
+    <li><a href="./tag/tech.html">tech</a></li>
     <li><a href="./tag/tools.html">tools</a></li>
     <li><a href="./tag/work.html">work</a></li>
     <li><a href="./tag/writing.html">writing</a></li>
@@ -154,7 +157,7 @@
     </div>     </div> 
 <footer>
 <br />
-<p><a href=".">SuperBond</a> &copy; subond 2017</p>
+<p><a href=".">SuperBond</a> &copy; subond 2018</p>
 </footer>
 
 </div> <!-- /container -->
