--- a/categories.html
+++ b/categories.html
@@ -40,7 +40,7 @@
         <div class="nav-collapse">
         <ul class="nav">
             
-            <li><a href="./pages/about-me.html">About Me</a></li>
+            <li><a href="./pages/subond-yu.html">Subond Yu</a></li>
         </ul>
         </div>
         
