--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -58,42 +58,45 @@
     <h2 class="content-title">
         About Me
     </h2>
-    <h2>Subond Yu (于邦超)</h2>
-<p>Email:yubc0321@gmail.com
-Github:<a href="https://github.com/yusubond">https://github.com/yusubond</a>
-Blog:<a href="http://www.subond.com">www.subond.com</a></p>
-<p>I am a Master graduate in the School of Information and Communication Engineering of Beijing University of Posts and Telecommunications, advised by Prof. Wei Zheng. I received the B.E. degree from the Beijing University of Chemical Technology.</p>
-<p>My researches mainly focus on the application of Software-Defined Network and Network Function Virtualization in the mobile core network (such as vEPC). And I also involved in the re-design of the overall network architecture and the resource orchestration and Service Function Chaining in the new architecture. In the past work, I have completed the management and orchestration in the core network (vEPC) with Juju (an open source application modeling tool). I have great interests in  MANO (Management and Orchestration0). I have participated in multiple joint develop projects with China Mobile, China Telecom in NFV field.</p>
-<h2>Education</h2>
-<table width="700" height="150" algin="left">
+    <p><font size="6"><b>Subond Yu</b></font></p>
+
+<table width="400" height="150" algin="left">
+  <tr><td>Email</td><td>yubc0321@gmail.com</td></tr>
+  <tr><td>Github</td><td><a href="https://github.com/yusubond">https://github.com/yusubond</td></tr>
+  <tr><td>HomePage</td><td><a href="http://www.subond.com">http://www.subond.com</td></tr>
+</table>
+
+<p><hr size="3px" color="#00RFF"/>
+<p><font size="4"><b>Education</b></font></p>
+<hr size="3px" color="#000000"/>
+<table width="800" height="150" algin="left">
   <tr><td><b>Beijing University of Posts and Telecommunications</b></td><td>09/2015-04/2018</td></tr>
   <tr><td>M.S. degree in Engineering</td><td></td></tr>
   <tr><td>Research Filed: Software Defined Network, Network Functions Virtualization</td><td></td></tr>
   <tr><td><b>Beijing University of Chemical Technology</b></td><td>09/2011-07/2015</td></tr>
   <tr><td>B.S. degree in Engineering</td><td>GPA:3.43/4.00</td></tr>
-</table>
+</table></p>
+<p><font size="4"><b>Internship</b></font></p>
 
-<h2>Internship</h2>
-<table width="700" height="30" algin="left">
-  <tr><td><b>VMware·CMBU</b></td><td>VIO-NFV Team</td><td>08/2017</td></tr>
+<p><hr size="3px" color="#000000"/>
+<table width="600" height="30" algin="left">
+  <tr><td><b>VMware·CMBU</b></td><td>VIO-NFV Team</td><td>08/2017-12/2017</td></tr>
 </table>
-
 <ul>
   <li>Research about the MANO in NFV field, including the service design, service orchestration, policy, App controller, network functions virtualization based on ONAP</li>
-</ul>
+</ul></p>
+<p><font size="4"><b>Research Projects</b></font></p>
 
-<h2>Research Projects</h2>
-<table width="700" height="30" algin="left">
-  <tr><td><b>Network Service Management and Orchestrator based on OpenStack</b></td><td>09/2016-06/2017</td></tr>
+<p><hr size="3px" color="#000000"/>
+<table width="600" height="30" algin="left">
+  <tr><td><b>Network Service Management and Orchestrator based on OpenStack</b></td><td>09/2016-09/2017</td></tr>
 </table>
-
 <ul>
   <li>Research about NFV Architecture, Open Source MANO</li>
   <li>Proposing and Implementing VNFs lifecycle management, including service design, create, scheduling and monitoring based on Juju Charms</li>
-</ul>
-
-<table width="700" height="30" algin="left">
-  <tr><td><b>LTE & WiFi Network Convergence based on SDN</b></td><td>01/2016-09/2016</td></tr>
+</ul></p>
+<table width="600" height="30" algin="left">
+  <tr><td><b>LTE & WiFi Network Convergence based on SDN</b></td><td>03/2016-09/2016</td></tr>
 </table>
 
 <ul>
@@ -101,8 +104,9 @@ Blog:<a href="http://www.subond.com">www.subond.com</a></p>
   <li>Designed and Completed the Data Distribution Strategy on PGW</li>
 </ul>
 
-<h2>Research Achievement</h2>
-<table width="800" height="200" algin="left">
+<p><font size="4"><b>Research Achievement</b></font><p>
+<hr size="3px" color="#000000"/>
+<table width="900" height="200" algin="left">
   <tr><td><b>Papers&nbsp;&nbsp;</b></td><td><b>Dynamic Resource Orchestration of Service Function Chaining In Network Function Virtualization</b></td><td><b>5GWN(2017)</b></td></tr>
   <tr><td>&nbsp;&nbsp;</td><td colspan=2><i><b>Bangchao Yu</b>, Wei Zheng, Xiangming Wen, Zhaoming Lu, Luhan Wang, and Lu Ma</i></td></tr>
   <tr><td>&nbsp;&nbsp;</td><td><b>An efficient and QoS-aware virtual network resource migration algorithm</b></td><td><b>ICCC(2015)</b></td></tr>
@@ -110,26 +114,26 @@ Blog:<a href="http://www.subond.com">www.subond.com</a></p>
   <tr><td><b>Patent</b></td><td colspan=2><b>一种基于SDN的核心网系统及其使用方法(CN105933246A)</b></td></tr>
 </table>
 
-<p><hr size="3px" color="#00BFF"/>
+<hr size="3px" color="#00BFF"/>
 <p><font size="4"><b>教育背景</b></font></p>
 <hr size="3px" color="#000000"/>
 <table width="800" algin="left">
   <tr height="30"><td>2015.09-2018.04</td><td>北京邮电大学</td><td>电子与通信工程</td><td>硕士研究生</td></tr>
   <tr height="30"><td>2011.09-2015.06</td><td>北京化工大学</td><td>通信工程</td><td>本科</td></tr>
-</table></p>
-<p><font size="4"><b>实习经历</b></font></p>
+</table>
 
-<p><hr size="3px" color="#000000"/>
+<p><font size="4"><b>实习经历</b></font></p>
+<hr size="3px" color="#000000"/>
 <table width="600" height="30" algin="left">
 <tr><td><b>2017.08-2017.12</b></td><td algin="left"><b>VMware·CMBU</b></td></tr>
 </table>
 <ul>
   <li>从事 NFV 领域中服务与编排前沿技术的调研与代码开发工作，主要包括资源的编排和管理，服务 的设计与创建，策略的设计，服务的编排和管理等</li>
   <li>搭建基于 ONAP 的网络自动化平台，为 SDNs、VNFs 等提供全生命周期管理(设计，创建，编排， 监控等)，实现网络服务自动化部署</li>
-</ul></p>
-<p><font size="4"><b>科研项目经历</b></font></p>
+</ul>
 
-<p><hr size="3px" color="#000000"/>
+<p><font size="4"><b>科研项目经历</b></font></p>
+<hr size="3px" color="#000000"/>
 <table width="600" height="30" algin="left">
 <tr><td><b>2016.09-2017.09</b></td><td algin="left"><b>基于OpenStack虚拟平台的业务链管理和服务编排</b></td></tr>
 </table>
@@ -195,7 +199,7 @@ Blog:<a href="http://www.subond.com">www.subond.com</a></p>
 <hr size="3px" color="#000000"/>
 <ul>
   <li>徒步，爬山，读书等</li>
-</ul></p>
+</ul>
 </section>
         </div>
         
