--- a/index3.html
+++ b/index3.html
@@ -41,7 +41,7 @@
         <ul class="nav">
             
             <li><a href="./pages/about-me.html">About Me</a></li>
-            <li><a href="./pages/wo-de-shu-dan.html">我的书单</a></li>
+            <li><a href="./pages/my_reading_list.html">我的书单</a></li>
         </ul>
         </div>
         
