Add my reading list

--- a/pages/my_reading_list.html
+++ b/pages/my_reading_list.html
@@ -59,160 +59,44 @@
     <h2 class="content-title">
         我的书单
     </h2>
-    <h3>2016&amp;2017年书单</h3>
-<table>
-<thead>
-<tr>
-<th align="left">书目</th>
-<th align="left">作者</th>
-<th align="left">类别</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td align="left">《激荡三十年》《跌荡一百年》《浩荡两千年》《激荡十年·水大鱼大》</td>
-<td align="left">吴晓波</td>
-<td align="left">经济、历史</td>
-</tr>
-<tr>
-<td align="left">《历代经历变革得失》</td>
-<td align="left">吴晓波</td>
-<td align="left">经济，历史</td>
-</tr>
-<tr>
-<td align="left">《大败局》两部</td>
-<td align="left">吴晓波</td>
-<td align="left">经济，商业案例</td>
-</tr>
-<tr>
-<td align="left">《腾讯传》《这些年马云犯过的错误》</td>
-<td align="left">吴晓波</td>
-<td align="left">商业案例</td>
-</tr>
-<tr>
-<td align="left">《浪潮之巅》《硅谷之谜》《智能革命》</td>
-<td align="left">吴军</td>
-<td align="left">计算机，科普</td>
-</tr>
-<tr>
-<td align="left">《中华帝国的衰落》</td>
-<td align="left">[美]魏斐德</td>
-<td align="left">历史</td>
-</tr>
-<tr>
-<td align="left">《社会契约论》</td>
-<td align="left">[法]卢梭</td>
-<td align="left">社会学</td>
-</tr>
-<tr>
-<td align="left">《零边际成本社会》</td>
-<td align="left">[美]杰里米·里夫金</td>
-<td align="left">社会，经济</td>
-</tr>
-<tr>
-<td align="left">《万万没想到：用理工科思维理解世界》《智识分子：做个复杂的现代人》</td>
-<td align="left">万维钢</td>
-<td align="left">理性思维，科普</td>
-</tr>
-<tr>
-<td align="left">《乡土中国》</td>
-<td align="left">费孝通</td>
-<td align="left">社会学，人类学</td>
-</tr>
-<tr>
-<td align="left">《大地上的亲人》</td>
-<td align="left">黄灯</td>
-<td align="left">社会，随笔</td>
-</tr>
-<tr>
-<td align="left">《把生命浪费在美好的事物上》</td>
-<td align="left">吴晓波</td>
-<td align="left">职场，鸡汤</td>
-</tr>
-</tbody>
-</table>
-<h3>2018年书单</h3>
-<table>
-<thead>
-<tr>
-<th align="left">书目</th>
-<th align="left">作者</th>
-<th align="left">类别</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td align="left">《中国历代政治得失》</td>
-<td align="left">钱穆</td>
-<td align="left">政治，历史</td>
-</tr>
-<tr>
-<td align="left">《人生十轮》</td>
-<td align="left">钱穆</td>
-<td align="left">哲学</td>
-</tr>
-<tr>
-<td align="left">《金融永不眠》</td>
-<td align="left">唐涯</td>
-<td align="left">金融，科普</td>
-</tr>
-<tr>
-<td align="left">《日本新中产阶级》</td>
-<td align="left">傅高义</td>
-<td align="left">社会学</td>
-</tr>
-<tr>
-<td align="left">《男人来自火星，女人来自金星》四部</td>
-<td align="left">约翰·格雷</td>
-<td align="left">两性关系</td>
-</tr>
-<tr>
-<td align="left">《货币金融学》</td>
-<td align="left">弗雷德里克·S·米什金</td>
-<td align="left">货币，金融</td>
-</tr>
-<tr>
-<td align="left">《白鹿原》</td>
-<td align="left">陈忠实</td>
-<td align="left">中国近现代小说</td>
-</tr>
-<tr>
-<td align="left">《激荡的百年史》</td>
-<td align="left">吉田茂(日本)</td>
-<td align="left">经济，历史</td>
-</tr>
-<tr>
-<td align="left">《新员工的差距是怎样拉开的》</td>
-<td align="left">千田琢哉</td>
-<td align="left">职场，个人成长</td>
-</tr>
-<tr>
-<td align="left">《高效能人士的七个习惯》</td>
-<td align="left">史蒂芬·柯维</td>
-<td align="left">职场，自我管理</td>
-</tr>
-<tr>
-<td align="left">《自控力》</td>
-<td align="left">凯利·麦格尼格尔美国</td>
-<td align="left">心理学，自我管理</td>
-</tr>
-<tr>
-<td align="left">《情商》</td>
-<td align="left">丹尼尔·戈尔曼</td>
-<td align="left">心理学，自我管理</td>
-</tr>
-<tr>
-<td align="left">《槽边往事》《你不重要，你的喜欢很重要》</td>
-<td align="left">和菜头</td>
-<td align="left">文集，随笔</td>
-</tr>
-<tr>
-<td align="left">《人·地·城》</td>
-<td align="left">徐远</td>
-<td align="left">经济，随笔</td>
-</tr>
-</tbody>
-</table>
+    <p><font size="4"><b>2016&2017年书单</b></font></p>
+
+<p><hr size="3px" color="#00BFF"/>
+<table width="800" algin="left">
+<tr><td><b>书目</b></td><td><b>作者</b></td><td><b>类别</b></td></tr>
+<tr><td>《激荡三十年》《跌荡一百年》《浩荡两千年》《激荡十年·水大鱼大》</td><td>吴晓波</td><td>经济、历史</td></tr>
+<tr><td>《历代经历变革得失》</td><td>吴晓波</td><td>经济，历史</td></tr>
+<tr><td>《大败局》两部</td><td>吴晓波</td><td>经济，商业案例</td></tr>
+<tr><td>《腾讯传》《这些年马云犯过的错误》</td><td>吴晓波</td><td>商业案例</td></tr>
+<tr><td>《浪潮之巅》《硅谷之谜》《智能革命》</td><td>吴军</td><td>计算机，科普</td></tr>
+<tr><td>《中华帝国的衰落》</td><td>[美]魏斐德</td><td>历史</td></tr>
+<tr><td>《社会契约论》</td><td>[法]卢梭</td><td>社会学</td></tr>
+<tr><td>《零边际成本社会》</td><td>[美]杰里米·里夫金</td><td>社会，经济</td></tr>
+<tr><td>《万万没想到：用理工科思维理解世界》《智识分子：做个复杂的现代人》</td><td>万维钢</td><td>理性思维，科普</td></tr>
+<tr><td>《乡土中国》</td><td>费孝通</td><td>社会学，人类学</td></tr>
+<tr><td>《大地上的亲人》</td><td>黄灯</td><td>社会，随笔</td></tr>
+<tr><td>《把生命浪费在美好的事物上》</td><td>吴晓波</td><td>职场，鸡汤</td><tr>
+</table></p>
+<p><font size="4"><b>2018年书单</b></font></p>
+
+<p><hr size="3px" color="#00BFF"/>
+<table width="800" algin="left">
+<tr><td><b>书目</b></td><td><b>作者</b></td><td><b>类别</b></td></tr>
+<tr><td>《中国历代政治得失》</td><td>钱穆</td><td>政治，历史</td></tr>
+<tr><td>《人生十轮》</td><td>钱穆</td><td>哲学</td></tr>
+<tr><td>《金融永不眠》</td><td>唐涯</td><td>金融，科普</td></tr>
+<tr><td>《日本新中产阶级》</td><td>傅高义</td><td>社会学</td></tr>
+<tr><td>《男人来自火星，女人来自金星》四部</td><td>约翰·格雷</td><td>两性关系</td></tr>
+<tr><td>《货币金融学》</td><td>弗雷德里克·S·米什金</td><td>货币，金融</td></tr>
+<tr><td>《白鹿原》</td><td>陈忠实</td><td>中国近现代小说</td></tr>
+<tr><td>《激荡的百年史》</td><td>吉田茂(日本)</td><td>经济，历史</td></tr>
+<tr><td>《新员工的差距是怎样拉开的》</td><td>千田琢哉</td><td>职场，个人成长</td></tr>
+<tr><td>《高效能人士的七个习惯》</td><td>史蒂芬·柯维</td><td>职场，自我管理</td></tr>
+<tr><td>《自控力》</td><td>凯利·麦格尼格尔美国</td><td>心理学，自我管理</td></tr>
+<tr><td>《情商》</td><td>丹尼尔·戈尔曼</td><td>心理学，自我管理</td></tr>
+<tr><td>《槽边往事》《你不重要，你的喜欢很重要》</td><td>和菜头</td><td>文集，随笔</td></tr>
+<tr><td>《人·地·城》</td><td>徐远</td><td>经济，随笔</td></tr>
+</table></p>
 </section>
         </div>
         
