Add my reading list

--- a/pages/my_reading_list.html
+++ b/pages/my_reading_list.html
@@ -62,7 +62,7 @@
     <p><font size="4"><b>2016&2017年书单</b></font></p>
 
 <p><hr size="3px" color="#00BFF"/>
-<table width="800" algin="left">
+<table border="1" width="800" algin="left">
 <tr><td><b>书目</b></td><td><b>作者</b></td><td><b>类别</b></td></tr>
 <tr><td>《激荡三十年》《跌荡一百年》《浩荡两千年》《激荡十年·水大鱼大》</td><td>吴晓波</td><td>经济、历史</td></tr>
 <tr><td>《历代经历变革得失》</td><td>吴晓波</td><td>经济，历史</td></tr>
@@ -80,7 +80,7 @@
 <p><font size="4"><b>2018年书单</b></font></p>
 
 <p><hr size="3px" color="#00BFF"/>
-<table width="800" algin="left">
+<table border="1" width="800" algin="left">
 <tr><td><b>书目</b></td><td><b>作者</b></td><td><b>类别</b></td></tr>
 <tr><td>《中国历代政治得失》</td><td>钱穆</td><td>政治，历史</td></tr>
 <tr><td>《人生十轮》</td><td>钱穆</td><td>哲学</td></tr>
