--- a/tags.html
+++ b/tags.html
@@ -71,13 +71,17 @@
     <li><a href="./tag/google.html">Google</a></li>
     <li><a href="./tag/growth.html">growth</a></li>
     <li><a href="./tag/juju.html">juju</a></li>
+    <li><a href="./tag/l2.html">L2</a></li>
+    <li><a href="./tag/l3.html">L3</a></li>
     <li><a href="./tag/life.html">life</a></li>
     <li><a href="./tag/linux.html">linux</a></li>
     <li><a href="./tag/lte.html">lte</a></li>
     <li><a href="./tag/machinelearning.html">MachineLearning</a></li>
+    <li><a href="./tag/network.html">Network</a></li>
     <li><a href="./tag/newtork-programming.html">newtork programming</a></li>
     <li><a href="./tag/nfv.html">NFV</a></li>
     <li><a href="./tag/orchestration.html">Orchestration</a></li>
+    <li><a href="./tag/p4lang.html">P4lang</a></li>
     <li><a href="./tag/pelican.html">pelican</a></li>
     <li><a href="./tag/process.html">process</a></li>
     <li><a href="./tag/pthread.html">pthread</a></li>
