update with the 7 habits of creative people

--- a/archives.html
+++ b/archives.html
@@ -60,6 +60,10 @@
 <table class="table">
     <tbody>
         <tr>
+        <td>03 Aug 2018</td>
+        <td><a href='./pages/2018/08/03/the-7-habits-of-highly-creative-people.html'>高创造性人士的7个习惯</a></td>
+        </tr>
+        <tr>
         <td>14 Jul 2018</td>
         <td><a href='./pages/2018/07/14/protobuf_repeated.html'>Protobuf中的repeated关键字的使用</a></td>
         </tr>
