--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ by <a class="url fn" href="./author/subond.html">subond</a>
 <p>几个世纪后，没有太大变化。唯一的区别是我们不再将创造力归功于神圣的灵魂，而是归于特殊的个体。我们认为只有贝多芬，毕加索和莫扎特才具有创造性的天才。</p>
 <p>事实上这不是真的。</p>
 <p>今天，我们解构和分析这个最难以捉摸的过程。我们逐渐明白，任何人都可以使用特定的行为和心态来达到预期的结果。</p>
-<p>以下是高度创造性人士的七种习惯。</p>
+<p>以下是高创造性人士的七种习惯。</p>
 <h2>1.像艺术家一样偷窃[Steal Like An Artist]</h2>
 <p>有抱负的创意人必须首先认识到这一事实。我们只需要转向Austin Kleon的书《Steal Like a Artist 》来学习：</p>
 <blockquote>
@@ -91,7 +91,7 @@ by <a class="url fn" href="./author/subond.html">subond</a>
 <blockquote>
 <p>“嚼一个思想家。研究有关该思想家的所有知识。然后找三个他爱的人，找出他们的一切。尽可能多地重复此操作。尽可能地爬上树的最顶端。“</p>
 </blockquote>
-<p>这不是筛选有价值的想法的唯一方法。创意源于创造以前从未见过的东西。这就是为什么畅销书作家Ryan Holiday在他怀疑时会转向经典。</p>
+<p>这不是筛选有价值想法的唯一方法。创意源于创造以前从未见过的东西。这就是为什么畅销书作家Ryan Holiday在他怀疑时会转向经典。</p>
 <p>经典作品是之所以称为“经典”的原因之一就是——他们经受住了时间的考验。斯多葛主义的哲学可以追溯到古希腊人，但是Ryan Holiday在他的书《 Ego Is The Enemy 》和《 the Obstacle is the Way》中展示了这些想法是如何相关的。他没有提出这些想法; 他应用了它们。</p>
 <p>仅观察周围环境是不够的。创意积极寻求各方面的最佳创意。他们一直在研究。</p>
 <h2>3.探索新领域[Enter New Domains]</h2>
@@ -116,7 +116,7 @@ by <a class="url fn" href="./author/subond.html">subond</a>
 <p>“另一方面，业余爱好者过度认同他的爱好，他的艺术抱负。他用它来定义自己。他是一位音乐家，画家，剧作家。忍者喜欢这个。抵抗知道业余作曲家永远不会写他的交响曲，因为他过度投入其成功并过度恐惧其失败。业余爱好者认真对待它使他瘫痪。“</p>
 </blockquote>
 <p>问题在于，我们接受过这样的培训：将自我价值与成就联系起来。如果是这样的话，谁会愿意创作一部用来评判他的作品呢？</p>
-<p>出于这个原因，Pressfield说我们必须从业余转向专业。只有这样，我们才能创造真正的创造性工作</p>
+<p>出于这个原因，Pressfield说我们必须从业余转向专业。只有这样，我们才能创造真正的创造性工作。</p>
 <blockquote>
 <p>“抵抗要求我们把自己的价值，我们的身份，我们的理由，放在别人对我们工作的反应上。抵抗知道我们不能接受这个。没人能。专业人士打击批评者。他甚至没有听到他们的声音。他提醒自己，批评者是反抗的，不知不觉的喉舌。“</p>
 </blockquote>
