add books for 2018.08

--- a/pages/my_reading_list.html
+++ b/pages/my_reading_list.html
@@ -114,6 +114,10 @@
 <tr><td><a href="https://yuque.com/subond/nextme/2018-06-reformingchina2">《变革中国》</a></td><td>罗纳德·哈里·科斯</td><td>经济</td><tr>
 <tr><td><a href="https://yuque.com/subond/nextme/2018-06-outliers2">《异类》</a></td><td>马尔科姆·格拉德威尔</td><td>社科类</td></tr>
 <tr><td><a href="https://yuque.com/subond/nextme/2018-06-attraction2">《魅力何来》</a></td><td>戴维·迈尔斯</td><td>两性、心理学</td></tr>
+<tr><td>《原则》</td><td>瑞·达利欧</td><td>自我管理，个人成长</td></tr>
+<tr><td>《富爸爸穷爸爸》</td><td>[美]罗伯特·清崎</td><td>投资理财</td></tr>
+<tr><td>《财务自由之路》</td><td>[德]博多·舍费尔</td><td>投资理财</td></tr>
+<tr><td>《天生不同-人格类型识别和潜能开发》</td><td>[美]伊莎贝尔·迈尔斯</td><td>自我认知</td></tr>
 </table></p>
 </section>
         </div>
