--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ by <a class="url fn" href="./author/subond.html">subond</a>
  
         </div>
         
-        <div><p>作者：<a href="https://www.knowledgeformen.com/author/austinrgillis97gmail-com/">Andrew Ferebee</a><br>
-原文：<a href="https://www.knowledgeformen.com/25-lessons-i-wish-i-had-learned-before-25">25 Lessons I Wish I Had Learned Before 25</a></p>
+        <div><p>作者：<a href="https://www.knowledgeformen.com/author/austinrgillis97gmail-com/">Andrew Ferebee</a></p>
+<p>原文：<a href="https://www.knowledgeformen.com/25-lessons-i-wish-i-had-learned-before-25">25 Lessons I Wish I Had Learned Before 25</a></p>
 <p>几个月前我才30岁。我简直不敢相信我写的那个......</p>
 <p>回顾我的20年代，我希望我能学到无数的课程，这样就可以让我拯救我多年的痛苦，心痛与沮丧。对于今天的我，我十分感激，但这并不能改变我过去十年的生活。但是，如果我重新做一遍，知道我今天所知道的，我会告诉20岁的自己(my 20-year-old self)有成千上万的事情。</p>
 <p>以下是我希望自己25岁之前应该学到的25堂课：</p>
